# my-bittorrent

./: .gitignore  CMakeLists.txt  CMakeLists.txt.torrent  README
doc/: configDoxygen
src/: main.c
src/include/: epoll.h  integrity.h  misc.h  parser.h  tracker.h
src/integrity/: check_sha1.c  misc.c  piece.c
src/parser/: clean.c  metainfo.c  mktorrent.c  parser.c  to_json.c
src/peers/: epoll.c  events.c  peers.c  switch.c
src/tracker/: epoll.c  keys.c  peers.c  tracker.c
test/: test.sh
test/script/: full_check.sh  integrity_dir.sh  integrity_long.sh  integrity_short.sh  integrity_true.sh  integrity_wrong.sh  mktorrent_dir.sh  mktorrent_long.sh  mktorrent_short.sh  mktorrent_wrong.sh  param_nofile.sh  param_null.sh  param_wrong_combo.sh  param_wrong_long.sh  param_wrong_multiples.sh  param_wrong_short.sh  param_wrongfile.sh  pretty_print.sh  print_dir.sh  print_long.sh  print_short.sh  print_wrong.sh
test/torrents/: Congratulations.txt_basic.torrent  Congratulations.txt_rogue.torrent  Congratulations.txt_seed.torrent  Congratulations.txt_slow_disconnect.torrent  Congratulations.txt_split.torrent  README  advanced_dir_basic.torrent  advanced_dir_rogue.torrent  advanced_dir_seed.torrent  advanced_dir_slow_disconnect.torrent  advanced_dir_split.torrent
